fix alignment

--- a/index.css
+++ b/index.css
@@ -324,6 +324,14 @@ footer{
 
 }
 
+.blog-post-container p{
+    text-align: justify;
+}
+
+.writing-container p{
+    text-align: justify;
+}
+
 .tag-container{
     margin-top: 1em;
     display: flex;
